# hwp-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  TODO.md
.github/workflows/: ci.yml  release.yml
.playwright-mcp/: page-2026-06-14T05-20-26-944Z.yml
crates/hwp-cli/: Cargo.toml
crates/hwp-cli/src/: format.rs  main.rs
crates/hwp-cli/tests/: cli.rs  regen.rs  table_edit.rs
crates/hwp-convert/: Cargo.toml
crates/hwp-convert/src/: base64.rs  edit.rs  field.rs  from_markdown.rs  html.rs  image.rs  lib.rs  markdown.rs  odt.rs  structure.rs
crates/hwp-model/: Cargo.toml
crates/hwp-model/src/: control.rs  document.rs  header.rs  lib.rs  list.rs  paragraph.rs  text.rs  units.rs
crates/hwp-render/: Cargo.toml
crates/hwp-render/src/: diff.rs  display.rs  equation.rs  fonts.rs  gso.rs  layout.rs  lib.rs  lineseg.rs  list.rs  pdf.rs  png.rs  shape.rs  svg.rs  (+1 more)
crates/hwp5/: Cargo.toml
crates/hwpx/: Cargo.toml
crates/hwpx/src/: error.rs  lib.rs  package.rs  patch.rs
crates/hwpx/src/read/: header.rs  mod.rs  section.rs  xml.rs
crates/hwpx/src/write/: header.rs  mod.rs  section.rs  templates.rs
crates/hwpx/tests/: patch.rs  read.rs  write.rs
docs/: README.md  실기검증-체크리스트.md
docs/design/: 05-rendering.md  07-hangul-compat-rules.md  08-external-research.md  10-hwp5-structure-map.md  11-hwpx-structure-map.md  12-feature-gaps.md
fixtures/: README.md
fixtures/golden/: README.md
fixtures/hwpx/: minimal.hwpx
fixtures/samples/: report-tables.hwpx
scripts/: release.sh
tools/: gen_effects_cases.py
(+38 files in other folders)
