[package]
name = "hwpx"
description = "HWPX(OWPML, KS X 6101) 포맷 reader/writer"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
hwp-model = { workspace = true }
zip = { workspace = true }
quick-xml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
hwp-convert = { workspace = true }
zip = { workspace = true }
